--- a/Site/cadastro/index.html
+++ b/Site/cadastro/index.html
@@ -17,7 +17,9 @@
             <form>
                 <input type="text" placeholder="Digite para pesquisar">
                 <button type="submit">
+                    <a href="../pesquisa/index.html" style="height: 40px;">
                     <img src="../imagens/lupa.png" alt="lupa de pesquisa">
+                    </a>
                 </button>
             </form>
         </div>
