--- a/Site/pedidos/pedido.html
+++ b/Site/pedidos/pedido.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/pedidos.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Pedido </title>
 </head>
 <body>
@@ -62,35 +63,38 @@
                 </p>
             </div>
             <div class="englobar">
+                <p class="emAberto">
+                    Em Aberto
+                </p>
                 <div class="pedido">
-                    <p>
-                        Em Aberto
-                    </p>
-
                     <div class="emAberto">
                         <div class="cima">
                             <div class="esq">
-                                <p>
+                                <p class="pedido">
                                     Pedido #00001
                                 </p>
-                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
-                                <p>
-                                    A caminho
-                                </p>
-                                <p>
+                                <div class=aCaminho>
+                                    <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                    <p>
+                                        A caminho
+                                    </p>
+                                </div>
+                                <p class="total">
                                     Total do pedido
                                 </p>
-                                <p>
+                                <p class="preco">
                                     R$: 20,00
                                 </p>
                             </div>
                             <div class="dir">
-                                <button class="rastreio">
-                                    <p>
-                                        Rastrear
-                                    </p>
-                                    <img src="../imagens/aviaodepapel.png" alt="ícone de rastreio">
-                                </button>
+                                <a href="rastreio/index.html">
+                                    <button class="rastreio">
+                                        <p>
+                                            Rastrear
+                                        </p>
+                                        <img src="../imagens/aviaodepapel.png" alt="ícone de rastreio">
+                                    </button>
+                                </a>
                                 <button class="cancela">
                                     <p>
                                         Cancelar
@@ -98,155 +102,196 @@
                                 </button>
                             </div>
                         </div>
-                        <p>
+                        <p class="item">
                             Itens do Pedido
                         </p>
                         <div class="baixo">
-                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
-                            <p>
-                                Bolo de bolo
-                                <br>
-                                Bolo doce
-                            </p>
-                            <p>
-                                Quantidade
-                                <br>
-                                1x
-                            </p>
-                            <p>
-                                Total
-                                <br>
-                                R$: 25.00
-                            </p>
+                            <img src="../imagens/retangulo.png" alt="retângulo ciano">
+                            <img src="../imagens/bolobrigas.png" alt="bolo de chocolate" class="bolo">
+                            <div>
+                                <p class="boloTitulo">
+                                    Bolo de bolo
+                                </p>
+                                <p class="boloLegenda">
+                                    Bolo doce
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Quantidade 
+                                </p>
+                                <p class="bold">
+                                    x1
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Total
+                                </p>
+                                <p class="bold">
+                                    R$: 25,00
+                                </p>
+                            </div>
                         </div>
                         <hr>
                         <div class="baixo">
-                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
-                            <p>
-                                Bolo de bolo
-                                <br>
-                                Bolo doce
-                            </p>
-                            <p>
-                                Quantidade
-                                <br>
-                                1x
-                            </p>
-                            <p>
-                                Total
-                                <br>
-                                R$: 25.00
-                            </p>
+                            <img src="../imagens/retangulo.png" alt="retângulo ciano">
+                            <img src="../imagens/bolobrigas.png" alt="bolo de chocolate" class="bolo">
+                            <div>
+                                <p class="boloTitulo">
+                                    Bolo de bolo
+                                </p>
+                                <p class="boloLegenda">
+                                    Bolo doce
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Quantidade 
+                                </p>
+                                <p class="bold">
+                                    x1
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Total
+                                </p>
+                                <p class="bold">
+                                    R$: 25,00
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="englobar">
+                <p class="emAberto">
+                    Entregue
+                </p>
                 <div class="pedido">
-                    <p>
-                        Entregue
-                    </p>
-
                     <div class="emAberto">
                         <div class="cima">
                             <div class="esq">
-                                <p>
+                                <p class="pedido">
                                     Pedido #00001
                                 </p>
-                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
-                                <p>
-                                    A caminho
-                                </p>
-                                <p>
+                                <div class=aCaminho>
+                                    <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                    <p>
+                                        Entregue
+                                    </p>
+                                </div>
+                                <p class="total">
                                     Total do pedido
                                 </p>
-                                <p>
+                                <p class="preco">
                                     R$: 20,00
                                 </p>
                             </div>
                             <div class="dir">
-                                <button class="reportarProblema">
-                                    <p>
-                                        Reportar um problema
-                                    </p>
-                                </button>
+                                <a href="../feedback/index.html">
+                                    <button class="problema">
+                                        <p>
+                                            Reportar um problema
+                                        </p>
+                                    </button>
+                                </a>
                             </div>
                         </div>
-                        <p>
+                        <p class="item">
                             Itens do Pedido
                         </p>
                         <div class="baixo">
-                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
-                            <p>
-                                Bolo de bolo
-                                <br>
-                                Bolo doce
-                            </p>
-                            <p>
-                                Quantidade
-                                <br>
-                                1x
-                            </p>
-                            <p>
-                                Total
-                                <br>
-                                R$: 25.00
-                            </p>
+                            <img src="../imagens/retangulo.png" alt="retângulo ciano">
+                            <img src="../imagens/bolobrigas.png" alt="bolo de chocolate" class="bolo">
+                            <div>
+                                <p class="boloTitulo">
+                                    Bolo de bolo
+                                </p>
+                                <p class="boloLegenda">
+                                    Bolo doce
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Quantidade 
+                                </p>
+                                <p class="bold">
+                                    x1
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Total
+                                </p>
+                                <p class="bold">
+                                    R$: 25,00
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="pedido">
-                    <p>
-                        Entregue
-                    </p>
 
                     <div class="emAberto">
                         <div class="cima">
                             <div class="esq">
-                                <p>
+                                <p class="pedido">
                                     Pedido #00001
                                 </p>
-                                <img src="../imagens/caminhao.png" alt="ícone de caminhão">
-                                <p>
-                                    A caminho
-                                </p>
-                                <p>
+                                <div class=aCaminho>
+                                    <img src="../imagens/caminhao.png" alt="ícone de caminhão">
+                                    <p>
+                                        Entregue
+                                    </p>
+                                </div>
+                                <p class="total">
                                     Total do pedido
                                 </p>
-                                <p>
+                                <p class="preco">
                                     R$: 20,00
                                 </p>
                             </div>
                             <div class="dir">
-                                <button class="reportarProblema">
+                                <a href="../feedback/index.html">
+                                <button class="problema">
                                     <p>
                                         Reportar um problema
                                     </p>
                                 </button>
+                                </a>
                             </div>
                         </div>
-                        <p>
+                        <p class="item">
                             Itens do Pedido
                         </p>
                         <div class="baixo">
-                            <img src="../imagens/retangulo.png" alt="bolo de chocolate">
-                            <p>
-                                Bolo de bolo
-                                <br>
-                                Bolo doce
-                            </p>
-                            <p>
-                                Quantidade
-                                <br>
-                                1x
-                            </p>
-                            <p>
-                                Total
-                                <br>
-                                R$: 25.00
-                            </p>
+                            <img src="../imagens/retangulo.png" alt="retângulo ciano">
+                            <img src="../imagens/bolobrigas.png" alt="bolo de chocolate" class="bolo">
+                            <div>
+                                <p class="boloTitulo">
+                                    Bolo de bolo
+                                </p>
+                                <p class="boloLegenda">
+                                    Bolo doce
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Quantidade 
+                                </p>
+                                <p class="bold">
+                                    x1
+                                </p>
+                            </div>
+                            <div>
+                                <p class="fino">
+                                    Total
+                                </p>
+                                <p class="bold">
+                                    R$: 25,00
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
